# amsterdam

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  README.md  amsterdam_8h.html  amsterdam_8h_source.html  annotated.html  classamst_1_1Receiver-members.html  classamst_1_1Receiver.html  classamst_1_1RecvError-members.html  classamst_1_1RecvError.html  classamst_1_1SendError-members.html  classamst_1_1SendError.html  classamst_1_1Sender-members.html  classamst_1_1Sender.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  hierarchy.html  index.html
doc/: Doxyfile.in
include/: amsterdam.h  channel.h
include/channels/: arc.h  channel.h
search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  pages_0.js  related_0.js  searchdata.js
src/: amsterdam.cpp  channel.cpp
test/: channel.cpp  channel.spec.cpp
